[package]
name = "rgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features = [ "im" ] }
grep = "0.2.10"
termcolor = "1.1.3"
walkdir = "2.3.2"
grep-searcher = "0.1.10"